--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,1 @@
-<h1>Hola Implaying with a new Programming language ans wanted to tell you that you are lovely:) <h1>
+<h1>Hola Im playing with a new Programming language and I wanted to tell you that you are lovely:) <h1>
